Adds alloc_med_resources() groovy function

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,5 +1,10 @@
 docker.enabled = true
 
+med_resources_fraction = 0.25
+max_memory  = '10.GB'
+max_forks   = 6
+max_cpus    = 2
+
 params {
   reads = false
   singleEnd = false
@@ -7,10 +12,29 @@ params {
 }
 
 process {
+  withLabel: med_resources {
+    container = 'flowcraft/fastqc:0.11.7-1'
+    cpus = { alloc_med_resource(params.max_cpus) }
+    maxForks =  { alloc_med_resource(params.max_forks) }
+    memory = { alloc_med_resource(params.max_memory) }
+  }
   withName: fastqc {
       container = 'flowcraft/fastqc:0.11.7-1'
   }
   withName: multiqc {
     container = 'ewels/multiqc:v1.7'
   }
+}
+
+def alloc_med_resource(obj) {
+    try {
+      if (obj.getClass() == nextflow.util.MemoryUnit)
+        return ( Math.floor ( (params.max_memory  as int) * (params.med_resources_fraction as float ) ) as nextflow.util.MemoryUnit )
+      else if (obj.getClass() == java.lang.Integer)
+        return ( Math.floor ( (obj as int) * (params.med_resources_fraction as float)) as int)
+      else
+        return obj
+    } catch (all) {
+        println "   ### ERROR ###   Max params max_memory:'${params.max_memory}', or max_cpus:'${params.max_cpus}'  or max_cpus:'${params.max_forks}'  is not valid! Using default value: $obj"
+    }
 }
