Move max_ in  params{}

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,21 +1,20 @@
 docker.enabled = true
 
-med_resources_fraction = 0.25
-max_memory  = '10.GB'
-max_forks   = 6
-max_cpus    = 2
-
 params {
   reads = false
   singleEnd = false
   outdir = 'results'
+  med_resources_fraction = 0.25
+  max_memory  = '10.GB'
+  max_forks   = 6
+  max_cpus    = 2
 }
 
 process {
   withLabel: med_resources {
     container = 'flowcraft/fastqc:0.11.7-1'
     cpus = { alloc_med_resource(params.max_cpus) }
-    maxForks =  { alloc_med_resource(params.max_forks) }
+    //maxForks =  { alloc_med_resource(params.max_forks) }
     memory = { alloc_med_resource(params.max_memory) }
   }
   withName: fastqc {
