--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,7 @@ params {
   med_resources_fraction = 0.25
   max_memory  = '10.GB'
   max_forks   = 6
-  max_cpus    = 2
+  max_cpus    = 5
 }
 
 process {
@@ -30,7 +30,7 @@ def alloc_med_resource(obj) {
       if (obj.getClass() == nextflow.util.MemoryUnit)
         return ( Math.floor ( (params.max_memory  as int) * (params.med_resources_fraction as float ) ) as nextflow.util.MemoryUnit )
       else if (obj.getClass() == java.lang.Integer)
-        return ( Math.floor ( (obj as int) * (params.med_resources_fraction as float)) as int)
+        return ( (obj as int) * (params.med_resources_fraction as float) as int)
       else
         return obj
     } catch (all) {
