--- a/nextflow.config
+++ b/nextflow.config
@@ -27,8 +27,8 @@ process {
 
 def alloc_med_resource(obj) {
     try {
-      if (obj.getClass() == nextflow.util.MemoryUnit)
-        return ( Math.floor ( (params.max_memory  as int) * (params.med_resources_fraction as float ) ) as nextflow.util.MemoryUnit )
+      if (obj.getClass() == java.lang.String)
+        return ( (obj as nextflow.util.MemoryUnit) * (params.med_resources_fraction as float) )
       else if (obj.getClass() == java.lang.Integer)
         return ( (obj as int) * (params.med_resources_fraction as float) as int)
       else
